# wallet-demo

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
api/: services.py  urls.py  views.py
api/serializers/: __init__.py  money_transfer.py  user_registration.py
customauth/: models.py  services.py
customauth/migrations/: 0001_initial.py
scheduler/: scheduler.py
scheduler/management/commands/: runscheduler.py
tests/api/: test_services.py  test_views.py
tests/customauth/: test_models.py  test_services.py
tests/wallet/: test_services.py
tests/wallet/repositories/: test_exchangeratesapi.py
wallet/: exceptions.py  models.py  services.py
wallet/management/commands/: update_exchange_rates.py
wallet/migrations/: 0001_initial.py  0002_auto_20200122_0813.py
wallet/repositories/: exceptions.py  exchangeratesapi.py
wallet_demo/: settings.py  urls.py  wsgi.py
