[tool.poetry]
name = "wallet_demo"
version = "0.1.0"
description = "Wallet project for demonstration purposes"
authors = ["Stanislav Balahonov <stblhnv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "2.2"
djangorestframework = "^3.11"
pytest-django = "^3.8"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
